# dash

./: .gitignore  AGENT.md  LICENSE  MAINTAINERS.md  Makefile  README.md  go.mod  go.sum  main.go  spin-pluginify.toml
.github/workflows/: release.yaml
cmd/: root.go  version.go
docs/superpowers/specs/: 2026-03-24-kv-explorer-redesign.md  2026-03-24-unified-ux-design.md
internal/config/: manifest.go  spin_toml.go  templates.go  writer.go
internal/db/: kv.go  sqlite.go
internal/kvexplorer/: injector.go
internal/kvexplorer/wasm/: kv_explorer.wasm
internal/otel/: logs_receiver.go  metrics_receiver.go  receiver.go
internal/process/: runner.go  runner_unix.go  runner_windows.go
internal/server/: hurl.go  routes.go  server.go  sse.go  watch_logs.go
kv-explorer/: Cargo.toml
kv-explorer/src/: http.rs  lib.rs  setup.rs
testapp/: Cargo.toml  spin.toml
testapp/api-handler/: Cargo.toml
testapp/api-handler/src/: lib.rs
testapp/src/: lib.rs
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  componentColors.ts  index.css
ui/src/api/: client.ts
ui/src/components/: AddBindingDialog.tsx  AddComponentDialog.tsx  AddServiceBindingDialog.tsx  AddVariableDialog.tsx  AppOverview.tsx  CommandPalette.tsx  ComponentTabs.tsx  EditSpinTomlModal.tsx  HttpTesting.tsx  KVExplorer.tsx  Layout.tsx  LogViewer.tsx  MetricsPage.tsx  ResizablePanel.tsx  SQLiteExplorer.tsx  TraceViewer.tsx  VarInspector.tsx
ui/src/components/http-testing/: HurlEditor.tsx  (+7 more)
ui/src/store/: appContext.tsx  logContext.tsx  testRunContext.tsx
(+16 files in other folders)
